added basic node set up to work off of for later.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <div class="container" >
 </div >
 
-<script src="../libs/angular/angular.min.js" ></script>
+<script src="./app-bundle.js" ></script>
 </body >
 </html >
+
