--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app>
 <head >
 	<title >Data Binding and Form Validation</title >
-	<link href="../libs/bootstrap/dist/css/bootstrap.min.css"
+	<link href="./libs/bootstrap/dist/css/bootstrap.min.css"
 	      rel="stylesheet" >
 	<link href="styles.css"
 	      rel="stylesheet" >
@@ -14,6 +14,41 @@
 	<h1>{{title}}</h1>
 </div >
 
+<nav class="navbar navbar-inverse navebar-fixed-top">
+	<div class="container">
+		<div class="navbar-header">
+			<a class="navbar-brand" href="/">Controllers</a>
+		</div>
+	</div>
+</nav>
+
+<div class="container main-content" ng-controller="MinMaxControl">
+	<form>
+		<div class="form-group">
+			<label for="name">Name</label>
+			<input 
+				type="text"
+				class="form-control"
+				id="name">
+		</div>
+
+		<div class="form-group">
+			<label for="email">Email</label>
+			<input 
+				type="email"
+				class="form-control"
+				id="email">
+		</div>
+
+		<div class="form-group">
+			<label for="password">Password</label>
+			<input 
+				type="password"
+				class="form-control"
+				id="password">
+		</div>
+	</form>
+</div>
 <script src="./libs/angular/angular.min.js" ></script>
 </body >
 </html >
