--- a/index.html
+++ b/index.html
@@ -34,6 +34,37 @@
 		</div>
 
 		<div class="form-group">
+			<label for="username">Username</label>
+			<input 
+				type="text"
+				class="form-control"
+				ng-model="formModel.username"
+				id="username">
+		</div>
+
+		<div class="form-group">
+			<label for="age">Age</label>
+			<input 
+				type="number"
+				class="form-control"
+				ng-model="formModel.age"
+				id="age">
+		</div>
+
+		<div class="form-group">
+			<label for="sex">Gender</label>
+			<select 
+				name="sex"
+				class="form-control"
+				ng-model="formModel.sex"
+				id="sex">
+				<option value="">What gender are you?</option>
+				<option value="male">Male</option>
+				<option value="female">Female</option>
+			</select>
+		</div>
+
+		<div class="form-group">
 			<label for="email">Email</label>
 			<input 
 				type="email"
@@ -52,7 +83,7 @@
 		</div>
 
 		<div class="form-group">
-			<button class="btn btn-primary">Register</button>
+			<button class="btn btn-primary" ng-click="onSubmit()">Register</button>
 		</div>
 	</form>
 	<pre>{{ formModel | json }}</pre>
