--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title >Data Binding and Form Validation</title >
 	<link href="./libs/bootstrap/dist/css/bootstrap.min.css"
 	      rel="stylesheet" >
+	<link href="./libs/ladda/dist/ladda-themeless.min.css"
+	      rel="stylesheet" >
 	<link href="styles.css"
 	      rel="stylesheet" >
 </head >
@@ -113,13 +115,22 @@
 		</div>
 
 		<div class="form-group">
-			<button class="btn btn-primary" ng-click="onSubmit()">Register</button>
+			<button class="btn btn-primary" 
+					ladda='submitting' 
+					data-style='expand-right' 
+					ng-click="onSubmit()">
+					<span ng-show="submitting">Registering</span>
+					<span ng-show="!submitting">Register</span>
+					</button>
 		</div>
 	</form>
 	<pre>{{ mainForm | json }}</pre>
 </div>
 <script src="./libs/angular/angular.min.js" ></script>
 <script src="./libs/angular-auto-validate/dist/jcs-auto-validate.min.js" ></script>
+<script src="./libs/ladda/dist/spin.min.js" ></script>
+<script src="./libs/ladda/dist/ladda.min.js" ></script>
+<script src="./libs/angular-ladda/dist/angular-ladda.min.js" ></script>
 <script src="./index.js" ></script>
 </body >
 </html >
